Dropdown, button and font modified

--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
       <div class="header-top">
         <nav>
           <ul>
-            <li><a href="#"><i class="fas fa-phone-alt"></i> 1-877-582-6735</a></li>
-            <li><a href="#"><i class="fas fa-comment-alt"></i> Chat</a></li>
-            <li><a href="#"><i class="fas fa-user"></i> Sign in</a></li>
-            <li><a href="#"><i class="fas fa-shopping-cart"></i> Cart</a></li>
+            <li><a href="#"><i class="fas fa-phone-alt"></i>1-877-582-6735</a></li>
+            <li><a href="#"><i class="fas fa-comment-alt"></i>Chat</a></li>
+            <li><a href="#"><i class="fas fa-user"></i>Sign in</a></li>
+            <li><a href="#"><i class="fas fa-shopping-cart"></i>Cart</a></li>
             <li><select>
               <option value="it">Italiano</option>
               <option value="en">English</option>
@@ -31,14 +31,46 @@
         </div>
         <nav class="navbar">
           <ul>
-            <li><a href="#">Product</a></li>
-            <li><a href="#">Product</a></li>
-            <li><a href="#">Product</a></li>
-            <li><a href="#">Product</a></li>
-            <li><a href="#">Product</a></li>
-            <li><a href="#">Product</a></li>
-            <li><a href="#">Product</a></li>
-            <li><a href="#">Product</a></li>
+            <li class="parent-dropdown">
+              <a href="#">Products</a>
+              <div class="dropdown">
+                <ul>
+                  <li class="dropdown-link">Digital Painting</li>
+                  <li class="dropdown-link">Painter</li>
+                  <li class="dropdown-link">ParticleShop</li>
+                  <li class="dropdown-link">Essential</li>
+                </ul>
+              </div>
+            </li>
+            <li class="parent-dropdown">
+              <a href="#">Brushes</a>
+              <div class="dropdown">
+                <ul>
+                  <li class="dropdown-link">Digital Painting</li>
+                  <li class="dropdown-link">Painter</li>
+                  <li class="dropdown-link">ParticleShop</li>
+                  <li class="dropdown-link">Essential</li>
+                </ul>
+              </div>
+            </li>
+            <li>
+              <a href="#">Wacom Tablets</a>
+            </li>
+            <li>
+              <a href="#">Special Offers</a>
+            </li>
+            <li>
+              <a href="#">Free Trials</a>
+            </li>
+            <li>
+              <a href="#">Business</a>
+            </li>
+            <li>
+              <a href="#">Support</a>
+            </li>
+            <li>
+              <a href="#">Learning</a>
+            </li>
           </ul>
         </nav>
       </div>
